# Grain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  community-adapter-registry-validate.yml  publish-pypi.yml
Formula/: grain.rb
LICENSES/: MIT.txt
contrib/community_adapter_registry/: README.md  review_checklist.md
docs/archive/: README.md
docs/canonical/: architecture.md  cli_spec.md  data_contracts.md  enforcement_spec.md  feedback_spec.md  landscape.md  product_scope.md  recipe_spec.md  suggest_spec.md  toolkit_contract.md  workflow_spec.md  workspace_model.md
docs/runtime/: AGENTS.md  CLAUDE.md  PROJECT_RULES.md  adapter_profiles.md  context_loading.md  docs_index.md  docs_manifest.yaml
docs/working/: apply_graduation.md  archive_spec.md  backlog.md  branch_policy_spec.md  change_proposals.md  cli_ergonomics_spec.md  community_adapter_authoring.md  current_focus.md  current_task.md  demo_runbook.md  demo_script_acme.md  demo_transcript.md  dev_runtime_alignment.md  docs_audit_spec.md  engine_contract_spec.md  friction_sweep_2026-07-09.md  future_roadmap.md  grain-audit-0.5.0.md  implementation_plan.md  inbox.md  open_questions.md  project_state.md  recipe_engine_spec.md  scaffold_audit.md  tooling_notes.md  tui_extension_spec.md  upgrade_enforcement_spec.md  v0.4.0_contract.md  v0.5.0_contract.md  v2_adapters.md  v2_onboarding.md  v2_plan.md  workflow_metrics.md
examples/demo/: AGENTS.md  README.md
examples/recipe-demo/: README.md  grain.toml
prompts/: README.md  close.md  context.export.md  context.show.md  docs.canonical.generate.md  docs.working.generate.md  docs.working.reconcile.md  execute.md  feature.classify.md  model.show.md  open_questions.resolve.md  phase.close.md  phase.plan.next.md  phase.replan.md  phase.review.md  phase.review_and_close.md  phase.tasks.generate.md  project.health.md  review.check.md  review.handoff.md  task.execute.md  task.plan.next.md  tasks.close.md  tasks.implement.md  tasks.next_and_implement.md  tasks.packet.first.md  tasks.packet.next.md  tasks.packet.phase.md  tasks.plan.next.md  tasks.review.md  tasks.validate.packet.md  workflow.init.md  workflow.onboard.existing.md  workflow.onboard.new.md
scripts/: bump_version.py  demo_cast.sh
src/forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/grain.egg-info/: PKG-INFO  SOURCES.txt
src/grain_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_adapter_capability.py  test_adapter_cmd.py  test_adapter_config_loader.py  test_adapter_context.py  test_adapter_domain.py  test_adapter_install_service.py  test_adapter_loading.py  test_adapter_package_service.py  test_agents_md_cmd.py  test_archive_cmd.py  test_archive_show_packets.py  test_authority_validator.py  test_bm25_provider.py  test_branch_policy.py  test_bump_version_script.py  test_bundled_research_brief.py  test_canonical_doc_selection.py  test_capture_cli.py  test_capture_service.py  test_cli_entrypoint.py  test_cli_ergonomics.py  test_cli_recipe.py  test_cli_recipe_run.py  test_closure_validation.py  test_codebase_scanner.py  test_command_groups.py  test_command_result_import_cycle.py  test_context_build.py  test_context_build_cmd.py  test_context_bundle.py  test_context_export.py  test_context_export_cmd.py  test_context_show_cmd.py  test_context_sources.py  test_contracts_workflow.py  test_data_artifact_extractor.py  test_doc_existence_validator.py  test_docs_audit_cmd.py  test_docs_extractor.py  (+137 more)
(+1556 files in other folders)
