[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "networkx>=3.3",
    "tree-sitter>=0.22",
]

[project.scripts]
grain = "grain.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
