[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grain-kit"
version = "0.8.0"
description = "CLI-first workflow toolkit for structured AI-assisted software development."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = [
    "ai",
    "workflow",
    "cli",
    "orchestration",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "grain-contracts>=0.2",
    "grain-core>=0.1",
    "click>=8.1",
    "PyYAML>=6.0",
    "networkx>=3.3",
    "textual>=0.67",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
]

[project.scripts]
grain = "grain.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
release = [
    "build>=1.4.3",
    "twine>=5.1",
]
data = [
    "pyarrow>=18.0",
    "h5py>=3.12",
]

[project.urls]
Homepage = "https://github.com/Diwata-Domains/Grain"
Repository = "https://github.com/Diwata-Domains/Grain"
Issues = "https://github.com/Diwata-Domains/Grain/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grain = ["data/**/*"]

[tool.pytest.ini_options]
# Collect only the real suite. examples/ holds runnable demo workspaces that
# ship their own tests; they are fixtures, not tests of grain.
testpaths = ["tests"]
